# api/internal/services/events/controller.go
@@ -2,11 +2,15 @@ package events
 
 import (
 	"api/internal/repository"
+	_ "api/internal/routes/middlewares"
+	_ "api/pkg/event"
 	"api/pkg/utils"
 	"errors"
+	"fmt"
 	"github.com/labstack/echo/v4"
 	"net/http"
 	"slices"
+	"strings"
 )
 
 type Controller struct {
@@ -21,17 +25,21 @@ func New() *Controller {
 	}
 }
 
+// EventModels represents a list of event types.
 var EventModels = []string{
 	"create_staff",
 	"create_staff_permission",
 	"update_staff_permission",
 	"update_staff_password",
 	"delete_staff",
+
 	"update_panel_config",
+
 	"update_oc_default_group",
 	"create_oc_group",
 	"update_oc_group",
 	"delete_oc_group",
+
 	"create_oc_user",
 	"update_oc_user",
 	"lock_oc_user",
@@ -52,18 +60,23 @@ var EventModels = []string{
 // @Param 		 pager query string false "Field to order by"
 // @Param 		 sort query string false "Sort order, either ASC or DESC" Enums(ASC, DESC)
 // @Param 		 model_name query string false "event model name"
-// @Param 		 event_type query string false "event type"
 // @Param 		 user_id query string false "id of user that does this event"
 // @Param 		 date_start query string false "event date create from"
 // @Param 		 date_end query string false "event date create to"
-// @Success      200 {object} []events.SchemaEvent
+// @Param 		 event_type path string true "name of event type" Enums(create_staff,create_staff_permission,update_staff_permission,update_staff_password,delete_staff,update_panel_config,update_oc_default_group,create_oc_group,update_oc_group,delete_oc_group,create_oc_user,update_oc_user,lock_oc_user,unlock_oc_user,disconnect_oc_user,delete_oc_user)
+// @Success      200 {object} []event.SchemaEvent
 // @Failure      400 {object} utils.ErrorResponse
 // @Failure      401 {object} middlewares.Unauthorized
 // @Router       /api/v1/events/:event_type [get]
 func (ctrl *Controller) Events(c echo.Context) error {
 	eventType := c.Param("event_type")
 	if !slices.Contains(EventModels, eventType) {
-		return utils.BadRequest(c, errors.New("invalid event name"))
+		return utils.BadRequest(
+			c,
+			errors.New(
+				fmt.Sprintf("invalid event name. valid names are: %s", strings.Join(EventModels, ", ")),
+			),
+		)
 	}
 	pageData := utils.NewPaginationRequest()
 	var filters repository.EventFilterRequest
